# fedora-update

./: .gitignore  README.md  build.sh  debug_kernel.py  fedora-update-silent.sh  fedora-update-verbose.sh  fedora-update.sh  fedora-update.spec  fedora_update_system.sh  fedora_update_system_v2.sh  pyproject.toml  spinner-sample.sh  test_kernel_check.py  update.sh
.github/workflows/: publish-repo.yml
debian/: changelog  control  copyright  rules
docs/: README.md  api-reference.md  architecture.md  developer-guide.md  faq.md  user-guide.md
docs/modules/: cli.md  kernel.md  runner.md  sudo_keepalive.md
extras/: fedora-update-testing.repo  fedora-update.repo  tuxgrade.list  tuxgrade.repo
legacy/: fedora-update.sh
src/: __version__.py  app.py  cli.py  main.py
src/app/: app.py  cli.py
src/core/: brew.py  dnf.py  flatpak.py  init.py  kernel.py  nvidia.py  snap.py
src/distros/: __init__.py  debian_distro.py  distro_manager.py  fedora_distro.py  generic_distro.py  rhel_distro.py
src/helper/: __init__.py  cli.py  cli_print_utility.py  runner.py  sudo_keepalive.py
src/package_managers/: __init__.py  apt.py  dnf.py  flatpak.py  snap.py
tests/: README.md  mocks.sh  run_tests.py  run_tests.sh  test_framework.sh  test_keepalive_modules.py  test_kernel_logic.py  test_kernel_logic.sh  test_sudo_keepalive.py  test_syntax.sh
tests/kernel/: __init__.py  test_full_upgrade.py  test_user_confirmation.py  test_version_detection.py  test_version_extraction.py
tests/sudo_keepalive/: __init__.py  test_basic.py  test_cross_module.py
tests/syntax/: __init__.py  test_python_syntax.py
