# ============================================================================
# Build System Configuration
# ============================================================================
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


# ============================================================================
# Project Metadata
# ============================================================================
[project]
name = "tuxgrade"
version = "3.0.0"
description = "Automated system upgrade script for several Linux distributions with DNF, Flatpak, Snap, and Homebrew support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Lineax17", email = "lineax17@gmail.com"}
]
requires-python = ">=3.10"
keywords = ["fedora", "linux", "update", "dnf", "flatpak", "snap", "homebrew", "system-upgrade", "automation"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]


# ============================================================================
# Dependencies
# ============================================================================
dependencies = [
    "distro>=1.9.0"
]


# ============================================================================
# Optional Dependencies
# ============================================================================
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
]


# ============================================================================
# Console Scripts (Entry Points)
# ============================================================================
[project.scripts]
tuxgrade = "src.main:main"
fedora-update = "src.main:main"
fedora-upgrade = "src.main:main"
fuck = "src.main:main"


# ============================================================================
# Project URLs
# ============================================================================
[project.urls]
# Homepage = "https://github.com/Lineax17/tuxgrade"
Repository = "https://github.com/Lineax17/tuxgrade"
Issues = "https://github.com/Lineax17/tuxgrade/issues"
Documentation = "https://github.com/Lineax17/tuxgrade/blob/main/README.md"


# ============================================================================
# Setuptools Configuration
# ============================================================================
[tool.setuptools]
packages = ["src", "src.core", "src.helper", "src.package_managers", "src.distros", "src.app"]


# ============================================================================
# Tool Configurations
# ============================================================================

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--verbose"

# mypy type checker configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

